[tool.poetry]
name = "compassochallenge"
version = "0.1.0"
description = ""
authors = ["João Jacques <joaopedro_jh@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
numpy = "^1.23.4"
plotly = "^5.11.0"
xgboost = "^1.6.2"
nbformat = "^5.7.0"
scipy = "^1.9.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
